Try to push jpg

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section>
             <nav id="jumpBackNav">
                 <ul>
-                    <li><img src="assets/img/Wappen.JPG" alt="wappen" class="Wappen"><br>
+                    <li><img src="assets/img/Wappen.jpg" alt="wappen" class="Wappen"><br>
                         <h1>Art Design Sold</h1>
                     </li>
                     <li><a href="#about">About</a></li>
