finished landing page

--- a/index.html
+++ b/index.html
@@ -92,36 +92,26 @@
             <form>
                 <input type="email" name="" placeholder="Email Adress" id="mail">
                 <br>
-                <input type="submit" value="submit" id="button">
+                <input type="submit" value="senden" id="button">
             </form>
         </section>
     </main>
 
-    <!-- <footer>
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="assets/img/Wappen.JPG"></a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </nav>
-        </section>
-    </footer> -->
-    
     <footer>
         <section>
-            <nav>
+            <nav id="jumpBackNav">
                 <ul>
-                    <li><img src="assets/img/Wappen.JPG" alt="wappen" class="Wappen2"><br>
+                    <li><img src="assets/img/Wappen.jpg" alt="wappen" class="Wappen"><br>
                         <h1>Art Design Sold</h1>
                     </li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#work">Work</a></li>
+                    <li><a href="#contact">Contact me</a></li>
                 </ul>
             </nav>
         </section>
-    </footer> 
+    </footer>
 
 </body>
+
 </html>
